managed to make the login ui

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="light-blue lighten-1" role="navigation">
+  <nav class=" pink lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">logout</a></li>
       </ul>
       
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">login</a></li>
+        <li><a href="/login.htm">login</a></li>
       </ul>
       
       <ul class="right hide-on-med-and-down">
