added new static pages

--- a/register.htm
+++ b/register.htm
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>Login Page</title>
+    <title>Registration Page</title>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -34,7 +34,7 @@
 
                 <div class="col s4 right"><span class="flow-text">
                     <form class="col s12" style="padding-top:35%">
-                            <h1 style="color: #e91e63;">Login</h1>
+                            <h1 style="color: #e91e63;">Register</h1>
                             <div class="row">
                                     <div class="input-field col s12">
                                         <input id="email" type="email" class="validate">
@@ -49,21 +49,14 @@
                         </div>
 
                         <div>
-                            <button style="width: 100%;" class="btn waves-effect pink" type="submit" name="action">Submit
+                            <button style="width: 100%;" class="btn waves-effect pink" type="submit" name="action">Register
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
-
                         <!-- <div class="row"> -->
-                        <a href="/register.htm">
+                       <a href="/login.htm">
                             <label style="color: #ed2f59; text-align: center">
-                                Not Registered? Click here to register
-                            </label>
-                        </a>
-                        <hr>
-                         <a href="/resetpass.htm">
-                            <label style="color: #ed2f59; text-align: center">
-                                Forgot Password? Click here to reset
+                                Already Registered? Click here to login
                             </label>
                         </a>
                         <!-- </div> -->
