--- a/profile.htm
+++ b/profile.htm
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>Starter Template - Materialize</title>
+    <title>Profile Page</title>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -11,9 +11,14 @@
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <script src="/libs/jquery-2.1.1.min.js"></script>
 </head>
-<body>
+<body style="background-color: #F4F7FA; ">
 <nav class=" pink lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper">
+        <!--<div class="nav-wrapper container">-->
+        <span style="float: left; padding-left: 2%">
+            <a  id="logo-container" href="#" class="brand-logo">Logo</a>
+        </span>
+
 
         <ul class="right hide-on-med-and-down">
             <li><a href="/login.htm">
@@ -32,10 +37,16 @@
         </ul>
 
         <ul class="right hide-on-med-and-down">
-            <li><a href="#">PROFILE</a></li>
+            <li><a href="profile.htm">CHAT </a><span><i style="color: white" class="material-icons">settings</i></span></li>
         </ul>
         <ul class="right hide-on-med-and-down">
-            <li><a href="#">DASHBOARD</a></li>
+            <li><a href="dashboard.htm">NOTIFICATIONS<span class="new badge">4</span></a></li>
+        </ul>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="profile.htm">PROFILE</a></li>
+        </ul>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="dashboard.htm">DASHBOARD</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
@@ -48,7 +59,7 @@
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
         <br><br>
-        <h1 class="header center orange-text">Starter Template</h1>
+        <h1 class="header center orange-text">Profile</h1>
         <div class="row center">
             <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
