--- a/dashboard.htm
+++ b/dashboard.htm
@@ -71,6 +71,7 @@
     <li class="tab col s3"><a href="#swipe-3">Users</a></li>
     <li class="tab col s3"><a href="#swipe-4">Finance</a></li>
     <li class="tab col s3"><a href="#swipe-5">Advertisements</a></li>
+    <li class="tab col s3"><a href="#swipe-6">Reports</a></li>
 </ul>
 <div id="swipe-1" class="col s12 ">
     <h5 style="float: left; padding-left: 1.8%">Services
@@ -94,6 +95,11 @@
 </div>
 <div style="float: left; padding-left: 1.8%" id="swipe-5" class="col s12 ">
     <h5 style="float: left; padding-left: 1.8%">Advertisements
+        <hr>
+    </h5>
+</div>
+<div style="float: left; padding-left: 1.8%" id="swipe-6" class="col s12 ">
+    <h5 style="float: left; padding-left: 1.8%">Reports
         <hr>
     </h5>
 </div>
