--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
@@ -10,6 +10,12 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <script src="/libs/jquery-2.1.1.min.js"></script>
+  <script src="/libs/angular.js"></script>
+  <script src="/libs/angular-route.js"></script>
+  <script src="/libs/angular-animate.js"></script>
+  <script src="/libs/angular-sanitize.js"></script>
+  <script src="/libs/angular-touch.js"></script>
+  <script src="/libs/d3.v4.min.js"></script>
 </head>
 <body>
   <nav class=" pink lighten-1" role="navigation">
