--- a/profile.htm
+++ b/profile.htm
@@ -10,6 +10,11 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <script src="/libs/jquery-2.1.1.min.js"></script>
+    <style>
+        .carousel .carousel-item{
+            width:100%;
+        }
+    </style>
 </head>
 <body style="background-color: #F4F7FA; ">
 <nav class=" pink lighten-1" role="navigation">
@@ -56,19 +61,73 @@
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
 </nav>
-<div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-        <br><br>
-        <h1 class="header center orange-text">Profile</h1>
-        <div class="row center">
-            <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+<ul id="tabs-swipe-demo" class="tabs">
+    <li class="tab col s3"><a href="#swipe-1">Basic Information</a></li>
+    <li class="tab col s3"><a class="active" href="#swipe-2">Change Password</a></li>
+</ul>
+<div id="swipe-1" class="col s12 ">
+
+    <div class="">
+        <h5 style="float: left; padding-left: 1.8%">Basic Information
+            <hr>
+        </h5>
+        <div style="padding-top: 6%">
+            <div style="float:left; width: 45%; padding-left: 20%" class=" red">
+                1
+            </div>
+            <div style="float: right; width: 45%; padding-right: 20%;" class=" pink">
+                2</div>
         </div>
-        <div class="row center">
-            <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <div class="row">
+            <div style="padding-right: 1%" class="col s7 push-s5 red"><span class="flow-text">This div is 7-columns wide on pushed to the right by 5-columns.</span></div>
+            <div class="col s5 pull-s7 blue"><span class="flow-text">5-columns wide pulled to the left by 7-columns.</span></div>
         </div>
-        <br><br>
+
 
     </div>
+</div>
+<div style="float: left; padding-left: 1.8%" id="swipe-2" class="col s12 ">
+    <h5 style="float: left; padding-left: 1.8%">Change Password
+        <hr>
+    </h5>
+</div>
+
+
+<div class="container">
+    <div class="section">
+
+        <!--   Icon Section   -->
+        <div class="row">
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+                    <h5 class="center">Speeds up development</h5>
+
+                    <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+                    <h5 class="center">User Experience Focused</h5>
+
+                    <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+                    <h5 class="center">Easy to work with</h5>
+
+                    <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
 </div>
 
 
@@ -144,7 +203,14 @@
         </div>
     </div>
 </footer>
-
+<script>
+    $(document).ready(function(){
+        $('ul.tabs').tabs({
+            swipeable : true,
+            responsiveThreshold : 1920
+        });
+    });
+</script>
 
 <!--  Scripts-->
 <script src="js/materialize.js"></script>
