refactored the split screem css code

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="/libs/angular-sanitize.js"></script>
   <script src="/libs/angular-touch.js"></script>
   <script src="/libs/d3.v4.min.js"></script>
+  <script src="logic.js"></script>
 </head>
 <body>
   <nav class=" pink lighten-1" role="navigation">
