--- a/register.htm
+++ b/register.htm
@@ -10,31 +10,82 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 <style>
+    .split {
+        height: 100%;
+        width: 50%;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        overflow-x: hidden;
+        padding-top: 20px;
+        }
+
     .left {
-    height: 100vh;
+    left: 0;
     background-color: #e91e63;
-    float: left;
     }
 
     .right {
-    height: 100vh;
-    float: right;
+    right: 0;
+    }
+
+    .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    }
+
+    .centered img {
+    width: 150px;
+    border-radius: 50%;
     }
 </style>
 
 </head>
     <body>
             <div class="row">
-                <div  class="col s8 left">
+                <div  class="split left">
                         <!-- <div style="background: #e91e63; height: 100vh;" class="col s8 "> -->
                     <span class="flow-text">
                         <h1 style="padding-top:30%; padding-bottom:30%; color: white; text-align: center;">Waridi</h1>
                     </span>
                 </div>
 
-                <div class="col s4 right"><span class="flow-text">
-                    <form class="col s12" style="padding-top:35%">
+                <div class="split right"><span class="flow-text">
+                    <form class="col s12" style="">
                             <h1 style="color: #e91e63;">Register</h1>
+                            <div class="row">
+                                    <div class="input-field col s12">
+                                        <input id="email" type="email" class="validate">
+                                        <label for="email">First Name</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                        <div class="input-field col s12">
+                                            <input id="email" type="email" class="validate">
+                                            <label for="email">Last Name</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                            <div class="input-field col s12">
+                                                <input id="email" type="email" class="validate">
+                                                <label for="email">Genger</label>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                                <div class="input-field col s12">
+                                                    <input id="email" type="email" class="validate">
+                                                    <label for="email">Mobile Number</label>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                    <div class="input-field col s12">
+                                                        <input id="email" type="email" class="validate">
+                                                        <label for="email">Role</label>
+                                                    </div>
+                                                </div>
                             <div class="row">
                                     <div class="input-field col s12">
                                         <input id="email" type="email" class="validate">
