--- a/resetpass.htm
+++ b/resetpass.htm
@@ -9,32 +9,40 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-<style>
-    .left {
-    height: 100vh;
-    background-color: #e91e63;
-    float: left;
-    }
-
-    .right {
-    height: 100vh;
-    float: right;
-    }
-</style>
+    <style>
+        .split {
+            height: 100%;
+            width: 50%;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            overflow-x: hidden;
+            padding-top: 20px;
+            }
+    
+        .left {
+            left: 0;
+            background-color: #e91e63;
+        }
+    
+        .right {
+            right: 0;
+        }
+        </style>
 
 </head>
     <body>
             <div class="row">
-                <div  class="col s8 left">
+                <div  class="split left">
                         <!-- <div style="background: #e91e63; height: 100vh;" class="col s8 "> -->
                     <span class="flow-text">
                         <h1 style="padding-top:30%; padding-bottom:30%; color: white; text-align: center;">Waridi</h1>
                     </span>
                 </div>
 
-                <div class="col s4 right">
+                <div class="split right">
                     <div class="flow-text">
-                    <div class="col s12" style="padding-top:35%">
+                    <div class="col s12" style="padding-top:25%">
                         <h1 style="color: #e91e63;">Reset Password</h1>
                         <div class="row">
                             <div class="input-field col s12">
